# workflow-examples

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  test.yml
src/: addition.c  addition.h  main.c
tests/: test_addition.c
